--- a/style.css
+++ b/style.css
@@ -1,5 +1,35 @@
 a {
-  color: rgb(151, 142, 172);
+  color: rgb(128, 100, 111);
+}
+
+.about-container {
+  justify-items: center;
+  display: flex;
+  padding: 15px 10px;
+}
+
+.about-img {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  top: 20%;
+  margin: 0 auto;
+  padding: 1rem;
+  width: 450px;
+  height: 450px;
+  overflow: hidden;
+}
+
+.about-text,
+.contact-container p {
+  margin-bottom: var(--mb-4);
+  font-size: 20px;
+}
+
+.about-section {
+  background-color: rgb(138, 176, 194);
+  justify-content: center;
+  padding: 20px 10px;
 }
 
 body {
@@ -7,6 +37,65 @@ body {
   background-color: rgba(218, 178, 185);
   padding: 50px;
   font-family: bradley hand, puzzeled, cursive, sans-serif;
+}
+
+.container {
+  display: flex;
+  grid-template-columns: repeat(4, 40px);
+  grid-area: auto;
+  background-color: rgb(235, 214, 217);
+  padding: 25px;
+}
+
+.col {
+  background-color: rgba(218, 178, 185);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  grid-area: inherit;
+  padding: 10px;
+  font-size: 15px;
+  text-align: center;
+}
+
+.contact {
+  background-color: rgb(138, 176, 194);
+  font-size: large;
+  padding: 20px 10px;
+}
+
+.cover {
+  background-color: rgb(235, 214, 217);
+  border: 2px dotted rgb(0, 224, 224);
+  height: 70px;
+  width: 200px;
+  color: #fff;
+  font-size: 35px;
+  text-align: center;
+  text-shadow: 0 0 8px rgb(0, 224, 224);
+  position: relative;
+  margin: 0 auto;
+  padding: 10px 10px;
+  overflow: hidden;
+  transition: 1s ease;
+}
+@keyframes bling {
+  50% {
+    border: 2px dashed rgb(0, 224, 224);
+  }
+  100% {
+    border: 2px ridge rgb(0, 224, 224);
+  }
+}
+.footer {
+  text-align: center;
+  font-size: small;
+}
+
+.footersentence {
+  text-align: center;
+  color: rgb(0, 0, 0);
+  font-size: 20px;
+  font-family: brush script mt;
+  font-weight: lighter;
 }
 
 h1 {
@@ -33,24 +122,6 @@ h3 {
   font-size: 18px;
 }
 
-.mediabanner:hover {
-  padding: 5px 10px;
-  text-decoration: none;
-  transition: all 0.5s ease-in-out;
-}
-
-p {
-  text-align: center;
-}
-
-span {
-  writing-mode: horizontal-tb;
-  font-size: var(--big-font-size);
-  text-shadow: 0 0px 4px rgb(140 140 140);
-  -webkit-text-shadow: 0 0 4px rgb(235, 214, 217);
-  -moz-text-shadow: 0 0 4px rgb(235, 214, 217);
-}
-
 .heading {
   font-size: 1em;
   color: rgb(235, 214, 217);
@@ -59,67 +130,6 @@ span {
   -webkit-transition: 2s;
   -moz-transition: 2s;
   -o-transition: 2s;
-}
-
-.container {
-  display: flex;
-  grid-template-columns: repeat(4, 40px);
-  grid-area: auto;
-  background-color: rgb(235, 214, 217);
-  padding: 25px;
-}
-
-.col {
-  background-color: rgba(218, 178, 185);
-  border: 1px solid rgba(0, 0, 0, 0.8);
-  grid-area: inherit;
-  padding: 10px;
-  font-size: 15px;
-  text-align: center;
-}
-
-.img-fluid {
-  max-width: 30%;
-  height: auto;
-}
-
-.pages {
-  color: rgb(26, 25, 25);
-}
-
-table {
-  border-collapse: collapse;
-  border: 2px solid rgb(235, 214, 217);
-
-  font-size: 0.8rem;
-  letter-spacing: 1px;
-}
-
-th,
-td {
-  border: 1px solid rgb(235, 214, 217);
-  padding: 10px 8px;
-}
-
-td {
-  text-align: center;
-}
-
-.contact {
-  color: rgb(151, 142, 172);
-  font-size: large;
-}
-
-.pages:hover {
-  cursor: pointer;
-}
-
-table {
-  float: right;
-}
-
-.puzzle {
-  font-size: large;
 }
 
 .home-scroll {
@@ -131,9 +141,6 @@ table {
   align-self: flex-end;
   padding-bottom: var(--mb-4);
   animation: float 1s linear infinite;
-  -webkit-animation: float 1s linear infinite;
-  -moz-animation: float 1s linear infinite;
-  -o-animation: float 0.1s linear infinite;
 }
 @keyframes float {
   100% {
@@ -144,21 +151,64 @@ table {
 html {
   scroll-behavior: smooth;
 }
+
+.img-fluid {
+  max-width: 20%;
+  height: auto;
+}
+
+.mediabanner:hover {
+  padding: 5px 10px;
+  text-decoration: none;
+  transition: all 0.5s ease-in-out;
+}
+
+p {
+  text-align: center;
+}
+
+.pages {
+  color: rgb(26, 25, 25);
+}
+
+.pages:hover {
+  cursor: pointer;
+}
+
+.puzzle {
+  font-size: large;
+}
+
+span {
+  writing-mode: horizontal-tb;
+  font-size: var(--big-font-size);
+  text-shadow: 0 0px 4px rgb(140 140 140);
+  -webkit-text-shadow: 0 0 4px rgb(235, 214, 217);
+  -moz-text-shadow: 0 0 4px rgb(235, 214, 217);
+}
+
 /* skills section */
+.skills-section {
+  background-color: rgba(218, 178, 185);
+  justify-content: center;
+  padding: 20px 10px;
+  margin: auto;
+}
 .skills-container {
   row-gap: 2rem;
+  text-align: center;
 }
 .skills-subtitle {
-  color: rgb(43, 189, 226);
+  color: rgb(153, 193, 212);
   margin-bottom: var(--mb-3);
 }
 .skills-name {
   display: inline-block;
-  font-size: 20px;
+  font-size: 25px;
   margin-right: var(--mb-2);
   margin-bottom: var(--mb-3);
-  padding: 0.35rem 0.5rem;
-  border: 3px dashed rgb(226, 43, 195);
+  padding: 1rem 1rem;
+  border: 4px dashed rgb(235, 214, 217);
   border-radius: 35px;
 }
 .skills-box span {
@@ -167,7 +217,7 @@ html {
   text-align: center;
 }
 .work-img a:hover {
-  border: 2px dashed rgb(21, 184, 248);
+  border: 2px dashed rgb(153, 193, 212);
   color: rgb(0, 255, 242);
   cursor: pointer;
 }
@@ -177,7 +227,7 @@ html {
     row-gap: 2rem;
   }
   .skills-subtitle {
-    color: rgb(43, 189, 226);
+    color: rgb(153, 193, 212);
     margin-bottom: var(--mb-3);
   }
   .skills-box {
@@ -193,7 +243,7 @@ html {
     padding: 0.35rem 0.5rem;
     border: 2px outset rgb(1, 68, 85);
     border-radius: 35px;
-    color: rgb(0, 224, 224);
+    color: rgb(153, 193, 212);
   }
   .skills-box span {
     padding: 20px;
@@ -208,35 +258,23 @@ html {
     width: 350px;
   }
 }
-.cover {
-  background-color: rgb(0, 0, 0);
-  border: 2px dotted rgb(245, 62, 220);
-  height: 40px;
-  width: 250px;
-  color: #fff;
-  font-size: 35px;
-  text-align: center;
-  text-shadow: 0 0 8px rgb(0, 224, 224);
-  position: relative;
-  left: 6px;
-  bottom: 100px;
-  margin: 0 auto;
-  margin-top: 20px;
-  padding: 12px 10px;
-  overflow: hidden;
-  transition: 1s ease;
-  -webkit-transition: 1s ease;
-  -moz-transition: 1s ease;
-  animation: bling 0.2s linear infinite;
-  -webkit-animation: bling 0.2s linear infinite;
-  -moz-animation: bling 0.2s linear infinite;
-  -o-animation: bling 5s linear infinite;
+table {
+  border-collapse: collapse;
+  border: 2px solid rgb(235, 214, 217);
+  font-size: 0.8rem;
+  letter-spacing: 1px;
 }
-@keyframes bling {
-  50% {
-    border: 2px dashed rgb(245, 62, 220);
-  }
-  100% {
-    border: 2px ridge rgb(5, 196, 196);
-  }
+
+th,
+td {
+  border: 1px solid rgb(235, 214, 217);
+  padding: 10px 8px;
+}
+
+td {
+  text-align: center;
+}
+
+table {
+  float: right;
 }
